frontend quiz app - score page

--- a/frontend-quiz-app/index.html
+++ b/frontend-quiz-app/index.html
@@ -165,6 +165,19 @@
             </p>
           </section>
         </article>
+        <article id="score-page" class="page hidden">
+          <h1 class="heading heading--primary">
+            Quiz completed<br />You scored...
+          </h1>
+          <section class="score-section">
+            <div class="score-card">
+              <div id="score-card-topic" class="topic heading"></div>
+              <p id="score" class="score"></p>
+              <p class="out-of">out of <span id="total"></span></p>
+            </div>
+            <button id="play-again" class="btn btn--primary">Play Again</button>
+          </section>
+        </article>
       </main>
     </div>
   </body>
