faq accordion - mobile

--- a/faq-accordion/index.html
+++ b/faq-accordion/index.html
@@ -15,11 +15,21 @@
   </head>
   <body>
     <main>
-      <h1>FAQs</h1>
+      <h1>
+        <img class="icon-star" src="images/icon-star.svg" alt="star icon" />FAQs
+      </h1>
       <article class="faqs">
-        <div class="faq">
-          <button class="question">
-            What is Frontend Mentor, and how will it help me?
+        <div class="faq open">
+          <button class="accordion">
+            <span class="question">
+              What is Frontend Mentor, and how will it help me?</span
+            >
+            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
+            <img
+              class="icon-minus"
+              src="images/icon-minus.svg"
+              alt="minus icon"
+            />
           </button>
           <p class="answer">
             Frontend Mentor offers realistic coding challenges to help
@@ -28,17 +38,35 @@
             for portfolio building.
           </p>
         </div>
+        <div class="separator"></div>
         <div class="faq">
-          <button class="question">Is Frontend Mentor free?</button>
+          <button class="accordion">
+            <span class="question">Is Frontend Mentor free?</span>
+            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
+            <img
+              class="icon-minus"
+              src="images/icon-minus.svg"
+              alt="minus icon"
+            />
+          </button>
           <p class="answer">
             Yes, Frontend Mentor offers both free and premium coding challenges,
             with the free option providing access to a range of projects
             suitable for all skill levels.
           </p>
         </div>
+        <div class="separator"></div>
         <div class="faq">
-          <button class="question">
-            Can I use Frontend Mentor projects in my portfolio?
+          <button class="accordion">
+            <span class="question">
+              Can I use Frontend Mentor projects in my portfolio?</span
+            >
+            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
+            <img
+              class="icon-minus"
+              src="images/icon-minus.svg"
+              alt="minus icon"
+            />
           </button>
           <p class="answer">
             Yes, you can use projects completed on Frontend Mentor in your
@@ -46,13 +74,22 @@
             potential employers!
           </p>
         </div>
+        <div class="separator"></div>
         <div class="faq">
-          <button class="question">
-            How can I get help if I'm stuck on a Frontend Mentor challenge?
+          <button class="accordion">
+            <span class="question">
+              How can I get help if I'm stuck on a challenge?</span
+            >
+            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
+            <img
+              class="icon-minus"
+              src="images/icon-minus.svg"
+              alt="minus icon"
+            />
           </button>
           <p class="answer">
             The best place to get help is inside Frontend Mentor's Discord
-            community. There's a help channel where you can ask questions and
+            community. There's a help channel where you can ask accordions and
             seek support from other community members.
           </p>
         </div>
