faq accordion - desktop

--- a/faq-accordion/index.html
+++ b/faq-accordion/index.html
@@ -24,9 +24,13 @@
             <span class="question">
               What is Frontend Mentor, and how will it help me?</span
             >
-            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
             <img
-              class="icon-minus"
+              class="icon icon-plus"
+              src="images/icon-plus.svg"
+              alt="plus icon"
+            />
+            <img
+              class="icon icon-minus"
               src="images/icon-minus.svg"
               alt="minus icon"
             />
@@ -42,9 +46,13 @@
         <div class="faq">
           <button class="accordion">
             <span class="question">Is Frontend Mentor free?</span>
-            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
             <img
-              class="icon-minus"
+              class="icon icon-plus"
+              src="images/icon-plus.svg"
+              alt="plus icon"
+            />
+            <img
+              class="icon icon-minus"
               src="images/icon-minus.svg"
               alt="minus icon"
             />
@@ -61,9 +69,13 @@
             <span class="question">
               Can I use Frontend Mentor projects in my portfolio?</span
             >
-            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
             <img
-              class="icon-minus"
+              class="icon icon icon-plus"
+              src="images/icon-plus.svg"
+              alt="plus icon"
+            />
+            <img
+              class="icon icon-minus"
               src="images/icon-minus.svg"
               alt="minus icon"
             />
@@ -80,9 +92,13 @@
             <span class="question">
               How can I get help if I'm stuck on a challenge?</span
             >
-            <img class="icon-plus" src="images/icon-plus.svg" alt="plus icon" />
             <img
-              class="icon-minus"
+              class="icon icon-plus"
+              src="images/icon-plus.svg"
+              alt="plus icon"
+            />
+            <img
+              class="icon icon-minus"
               src="images/icon-minus.svg"
               alt="minus icon"
             />
