--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -71,7 +71,11 @@
             />
             <p class="error_message" id="error-email"></p>
           </div>
-          <fieldset role="radiogroup" aria-describedby="error-query_type">
+          <fieldset
+            class="query_type"
+            role="radiogroup"
+            aria-describedby="error-query_type"
+          >
             <legend class="label">
               Query Type<span class="required">*</span
               ><span class="sr-only">required</span>
@@ -134,9 +138,13 @@
         <button class="btn">Submit</button>
       </form>
     </main>
-    <dialog id="modal" class="modal">
-      <h2>Message Sent!</h2>
-      <p>Thanks for completing the form. We'll be in touch soon!</p>
-    </dialog>
+    <div class="modal-container">
+      <dialog id="modal" class="modal">
+        <h2>
+          <img src="images/icon-success-check.svg" alt="" /> Message Sent!
+        </h2>
+        <p>Thanks for completing the form. We'll be in touch soon!</p>
+      </dialog>
+    </div>
   </body>
 </html>
