--- a/news-homepage/index.html
+++ b/news-homepage/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
@@ -14,91 +13,118 @@
     <title>Frontend Mentor | News homepage</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="list-nav">
-          <li class="item-nav"><a href="#home">Home</a></li>
-          <li class="item-nav"><a href="#new">New</a></li>
-          <li class="item-nav"><a href="#popular">Popular</a></li>
-          <li class="item-nav"><a href="#trending">Trending</a></li>
-          <li class="item-nav"><a href="#categories">Categories</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section id="home" class="section section--home">
-      <h1>The Bright Future of Web 3.0?</h1>
-      <p>
-        We dive into the next evolution of the web that claims to put the power
-        of the platforms back into the hands of the people. But is it really
-        fulfilling its promise?
-      </p>
-      <button>Read more</button>
-    </section>
-
-    <section id="new" class="section section--new">
-      <h2>New</h2>
-      <ul class="list-new">
-        <li class="item-new">
-          <h3>Hydrogen VS Electric Cars</h3>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </li>
-        <li class="item-new">
-          <h3>The Downsides of AI Artistry</h3>
-          <p>
-            What are the possible adverse effects of on-demand AI image
-            generation?
-          </p>
-        </li>
-        <li class="item-new">
-          <h3>Is VC Funding Drying Up?</h3>
-          <p>
-            Private funding by VC firms is down 50% YOY. We take a look at what
-            that means.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section id="trending" class="section section--trending">
-      <ul class="list-trending">
-        <li class="item-trending">
+    <div class="container">
+      <header class="header">
+        <img class="img-logo" src="images/logo.svg" alt="W logo" />
+        <img class="img-menu--open" src="images/icon-menu.svg" alt="" />
+        <nav class="navigation" aria-label="main menu">
+          <ul class="list-nav">
+            <img
+              class="img-menu--close"
+              src="images/icon-menu-close.svg"
+              alt=""
+            />
+            <li class="item-nav"><a href="#home">Home</a></li>
+            <li class="item-nav"><a href="#new">New</a></li>
+            <li class="item-nav"><a href="#popular">Popular</a></li>
+            <li class="item-nav"><a href="#trending">Trending</a></li>
+            <li class="item-nav"><a href="#categories">Categories</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-content">
+        <article id="home" class="article article--home">
           <img
-            class="item-trending__img"
-            src="images/image-retro-pcs.jpg"
-            alt="retro PC"
+            class="home__img"
+            src="images/image-web-3-mobile.jpg"
+            alt="A collage of red, blue, light blue and brown wooden shapes packed tightly together"
           />
-          <p class="item-trending__number">01</p>
-          <h3 class="item-trending__title">Reviving Retro PCs</h3>
-          <p class="item-trending__description">
-            What happens when old PCs are given modern upgrades?
+          <h1 class="home__title">The Bright Future of Web 3.0?</h1>
+          <p class="home__text">
+            We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is it
+            really fulfilling its promise?
           </p>
-        </li>
-        <li class="item-trending">
-          <img
-            class="item-trending__img"
-            src="images/image-top-laptops.jpg"
-            alt="retro PC"
-          />
-          <p class="item-trending__number">02</p>
-          <h3 class="item-trending__title">Top 10 Laptops of 2022</h3>
-          <p class="item-trending__description">
-            Our best picks for various needs and budgets.
-          </p>
-        </li>
-        <li class="item-trending">
-          <img
-            class="item-trending__img"
-            src="images/image-gaming-growth.jpg"
-            alt="retro PC"
-          />
-          <p class="item-trending__number">03</p>
-          <h3 class="item-trending__title">The Growth of Gaming</h3>
-          <p class="item-trending__description">
-            How the pandemic has sparked fresh opportunities.
-          </p>
-        </li>
-      </ul>
-    </section>
+          <button class="home__btn">Read more</button>
+        </article>
+        <article id="new" class="article article--new">
+          <h2 class="new__title">New</h2>
+          <ul class="new__list">
+            <li class="new__list__item">
+              <h3>Hydrogen VS Electric Cars</h3>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            </li>
+            <div class="line"></div>
+            <li class="new__list__item">
+              <h3>The Downsides of AI Artistry</h3>
+              <p>
+                What are the possible adverse effects of on-demand AI image
+                generation?
+              </p>
+            </li>
+            <div class="line"></div>
+            <li class="new__list__item">
+              <h3>Is VC Funding Drying Up?</h3>
+              <p>
+                Private funding by VC firms is down 50% YOY. We take a look at
+                what that means.
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article id="trending" class="article article--trending">
+          <ul class="trending__list">
+            <li class="trending__list__item">
+              <img
+                class="trending__list__item__img"
+                src="images/image-retro-pcs.jpg"
+                alt="retro PC"
+              />
+              <div class="trending__list__item__detail">
+                <p class="trending__list__item__detail__number">01</p>
+                <h3 class="trending__list__item__detail__title">
+                  Reviving Retro PCs
+                </h3>
+                <p class="trending__list__item__detail__description">
+                  What happens when old PCs are given modern upgrades?
+                </p>
+              </div>
+            </li>
+            <li class="trending__list__item">
+              <img
+                class="trending__list__item__img"
+                src="images/image-top-laptops.jpg"
+                alt="retro PC"
+              />
+              <div class="trending__list__item__detail">
+                <p class="trending__list__item__detail__number">02</p>
+                <h3 class="trending__list__item__detail__title">
+                  Top 10 Laptops of 2022
+                </h3>
+                <p class="trending__list__item__detail__description">
+                  Our best picks for various needs and budgets.
+                </p>
+              </div>
+            </li>
+            <li class="trending__list__item">
+              <img
+                class="trending__list__item__img"
+                src="images/image-gaming-growth.jpg"
+                alt="retro PC"
+              />
+              <div class="trending__list__item__detail">
+                <p class="trending__list__item__detail__number">03</p>
+                <h3 class="trending__list__item__detail__title">
+                  The Growth of Gaming
+                </h3>
+                <p class="trending__list__item__detail__description">
+                  How the pandemic has sparked fresh opportunities.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </article>
+      </main>
+    </div>
   </body>
 </html>
