news homepage - responsive

--- a/news-homepage/index.html
+++ b/news-homepage/index.html
@@ -18,7 +18,7 @@
       <header class="header">
         <img class="img-logo" src="images/logo.svg" alt="W logo" />
         <img id="nav-open" class="nav-open" src="images/icon-menu.svg" alt="" />
-        <nav id="nav" class="nav open" aria-label="main menu">
+        <nav id="nav" class="nav" aria-label="main menu">
           <img
             id="nav-close"
             class="nav-close"
@@ -44,12 +44,14 @@
             alt="A collage of red, blue, light blue and brown wooden shapes packed tightly together"
           />
           <h1 class="home__title">The Bright Future of Web 3.0?</h1>
-          <p class="home__text">
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
-          <button class="home__btn">Read more</button>
+          <aside class="home__aside">
+            <p class="home__aside__text">
+              We dive into the next evolution of the web that claims to put the
+              power of the platforms back into the hands of the people. But is
+              it really fulfilling its promise?
+            </p>
+            <button class="home__aside__btn">Read more</button>
+          </aside>
         </article>
         <article id="new" class="article article--new">
           <h2 class="new__title">New</h2>
