--- a/news-homepage/index.html
+++ b/news-homepage/index.html
@@ -57,21 +57,29 @@
           <h2 class="new__title">New</h2>
           <ul class="new__list">
             <li class="new__list__item">
-              <h3>Hydrogen VS Electric Cars</h3>
-              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+              <a class="new__list__item__link" href="#"
+                >Hydrogen VS Electric Cars</a
+              >
+              <p class="new__list__item__text">
+                Will hydrogen-fueled cars ever catch up to EVs?
+              </p>
             </li>
             <div class="line"></div>
             <li class="new__list__item">
-              <h3>The Downsides of AI Artistry</h3>
-              <p>
+              <a class="new__list__item__link" href="#"
+                >The Downsides of AI Artistry</a
+              >
+              <p class="new__list__item__text">
                 What are the possible adverse effects of on-demand AI image
                 generation?
               </p>
             </li>
             <div class="line"></div>
             <li class="new__list__item">
-              <h3>Is VC Funding Drying Up?</h3>
-              <p>
+              <a class="new__list__item__link" href="#"
+                >Is VC Funding Drying Up?</a
+              >
+              <p class="new__list__item__text">
                 Private funding by VC firms is down 50% YOY. We take a look at
                 what that means.
               </p>
@@ -88,9 +96,9 @@
               />
               <div class="trending__list__item__detail">
                 <p class="trending__list__item__detail__number">01</p>
-                <h3 class="trending__list__item__detail__title">
+                <a href="#" class="trending__list__item__detail__link">
                   Reviving Retro PCs
-                </h3>
+                </a>
                 <p class="trending__list__item__detail__description">
                   What happens when old PCs are given modern upgrades?
                 </p>
@@ -104,9 +112,9 @@
               />
               <div class="trending__list__item__detail">
                 <p class="trending__list__item__detail__number">02</p>
-                <h3 class="trending__list__item__detail__title">
+                <a href="#" class="trending__list__item__detail__link">
                   Top 10 Laptops of 2022
-                </h3>
+                </a>
                 <p class="trending__list__item__detail__description">
                   Our best picks for various needs and budgets.
                 </p>
@@ -120,9 +128,9 @@
               />
               <div class="trending__list__item__detail">
                 <p class="trending__list__item__detail__number">03</p>
-                <h3 class="trending__list__item__detail__title">
+                <a href="#" class="trending__list__item__detail__link">
                   The Growth of Gaming
-                </h3>
+                </a>
                 <p class="trending__list__item__detail__description">
                   How the pandemic has sparked fresh opportunities.
                 </p>
