--- a/news-homepage/index.html
+++ b/news-homepage/index.html
@@ -26,7 +26,7 @@
         >
           <img src="images/icon-menu.svg" alt="" />
         </button>
-        <nav id="nav" class="nav" role="dialog" aria-labelledby="nav-label">
+        <nav id="nav" class="nav" aria-labelledby="nav-label">
           <button id="nav-close" class="nav-btn nav-close" aria-label="Close">
             <img src="images/icon-menu-close.svg" alt="" />
           </button>
@@ -69,7 +69,7 @@
                 Will hydrogen-fueled cars ever catch up to EVs?
               </p>
             </li>
-            <div class="line"></div>
+            <li class="line"></li>
             <li class="new__list__item">
               <a class="new__list__item__link" href="#"
                 >The Downsides of AI Artistry</a
@@ -79,7 +79,7 @@
                 generation?
               </p>
             </li>
-            <div class="line"></div>
+            <li class="line"></li>
             <li class="new__list__item">
               <a class="new__list__item__link" href="#"
                 >Is VC Funding Drying Up?</a
