--- a/ecommerce-product-page/index.html
+++ b/ecommerce-product-page/index.html
@@ -56,6 +56,33 @@
       </button>
     </header>
     <main id="main" class="main">
+      <div class="carousel">
+        <div class="slide fade active">
+          <img
+            src="images/image-product-1.jpg"
+            alt="pair of shoes angle 1"
+            class="slide__img"
+          />
+        </div>
+        <div class="slide fade">
+          <img src="images/image-product-2.jpg"" alt="pair of shoes angle 2"
+          class="slide__img" />
+        </div>
+        <div class="slide fade">
+          <img src="images/image-product-3.jpg"" alt="pair of shoes angle 3"
+          class="slide__img" />
+        </div>
+        <div class="slide fade">
+          <img src="images/image-product-4.jpg"" alt="pair of shoes angle 4"
+          class="slide__img" />
+        </div>
+        <a id="slide-prev" class="slide-btn btn--prev"
+          ><img src="images/icon-previous.svg" alt="arrow to left"
+        /></a>
+        <a id="slide-next" class="slide-btn btn--next"
+          ><img src="images/icon-next.svg" alt="arrow to right"
+        /></a>
+      </div>
       <div class="container">
         <p class="subtitle">Sneaker Company</p>
         <h1 class="product__title">Fall Limited Edition Sneakers</h1>
